@@ -78,6 +78,10 @@ namespace Marvel {
 						ImGui::OpenPopup(getPopup().c_str());
 				}
 			}
+
+			// Regular Tooltip (simple)
+			if (!getTip().empty() && ImGui::IsItemHovered())
+				ImGui::SetTooltip("%s", getTip().c_str());
 		}
 
 	private:
