@@ -127,7 +127,7 @@ add_popup("Modal Window", "ModalPopup", modal=True)
 add_simple_plot("Simpleplot##modal", (0.3, 0.9, 2.5, 8.9), height = 80)
 add_button("Close Window##modal", callback="close_popup")
 end_popup()
-add_text("Right Click Me")
+add_text("Right Click Me", tip="not hooked up")
 #add_popup("Right Click Me", "RegularPopup", mousebutton=mc.mvMouseButton_Right)
 #add_simple_plot("Simpleplot##popup", (0.3, 0.9, 2.5, 8.9), height = 80)
 #end_popup()
